force-app/main/default/objects/Contact/fields/AttendanceStatus__c.field-meta.xml
<CustomField>
    <fullName>AttendanceStatus__c</fullName>
    <inlineHelpText>This is only on Contact for expediency</inlineHelpText>
    <label>Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Asleep</fullName>
            </value>
            <value>
                <fullName>Excused Absence</fullName>
            </value>
            <value>
                <fullName>Unexcused Absence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>