force-app/main/default/objects/Contact/fields/Is_Newsletter_Subscribed__c.field-meta.xml
<CustomField>
    <fullName>Is_Newsletter_Subscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Newsletter Subscribed</label>
    <type>Checkbox</type>
</CustomField>