force-app/main/default/objects/Contact/fields/PPBTB2BV2__Braintree_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>PPBTB2BV2__Braintree_Customer_Id__c</fullName>
    <label>Braintree Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>